[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sprout-social-mcp"
version = "0.1.0"
description = "MCP server for managing Sprout Social via Claude"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]
