[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sprout-social-mcp"
version = "0.1.1"
description = "MCP server for managing Sprout Social via Claude"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
sprout-social-mcp = "sprout_social_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["sprout_social_mcp"]

[tool.hatch.build.targets.sdist]
exclude = [
  "node/",
  ".claude/",
  "__pycache__/",
  "*.pyc",
]
